--- a/css/global/global.css
+++ b/css/global/global.css
@@ -1,17 +1,21 @@
 body {
-  margin: 0;
+  margin: 0px;
   font-family: Arial, Helvetica, sans-serif;
+  color: #111111;
   padding-bottom: 600px;
 }
 
 h1,
+h2,
+h3,
+h4,
 ul,
 p {
   margin: 0px;
 }
 
 ul {
-  padding: 0;
+  padding: 0px;
   list-style: none;
 }
 
@@ -23,4 +27,8 @@ a {
 img {
   max-width: 100%;
   display: block;
+}
+
+img[src$=".jpg"] {
+  border-radius: 4px;
 }
