--- a/css/global/header.css
+++ b/css/global/header.css
@@ -1,5 +1,5 @@
 .header-bg {
-  background-color: #000000;
+  background-color: var(--cor-12);
 }
 
 .header {
@@ -23,12 +23,8 @@
 
 .header-menu a {
   display: inline-block;
-  color: #ffffff;
-  padding: 16px 0;
-  font-size: 18px;
+  padding: 16px 0px;
   position: relative;
-  font-family: "Poppins";
-  font-weight: 400;
 }
 
 .header-menu a:after {
@@ -36,7 +32,7 @@
   display: block;
   height: 2px;
   width: 0px;
-  background-color: #ffffff;
+  background: var(--cor-0);
   margin-top: 4px;
   transition: 0.3s;
   position: absolute;
@@ -50,16 +46,14 @@
   .header-menu {
     gap: 20px;
   }
-
   .header-menu a {
-    background: #222222;
+    background: var(--cor-11);
     padding: 12px 16px;
     border-radius: 4px;
   }
   .header-menu a:hover {
-    background-color: #2e2e2e;
+    background-color: var(--cor-10);
   }
-
   .header a:after {
     display: none;
   }
@@ -69,7 +63,6 @@
   .header-menu {
     gap: 12px;
   }
-
   .header-menu a {
     padding: 8px 12px;
     font-size: 14px;
