--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,8 @@
 
 /* Seguros */
 @import "./seguros/seguros.css";
+@import "./seguros/vantagens.css";
+@import "./seguros/perguntas.css";
 
 /* termos e condições */
 @import "./termos/termos.css";
