--- a/css/style.css
+++ b/css/style.css
@@ -32,5 +32,8 @@
 @import "./contato/contato.css";
 @import "./contato/lojas.css";
 
+/* contato */
+@import "./orcamento/orcamento.css;
+
 /* termos e condições */
 @import "./termos/termos.css";
