--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@
 @import "./contato/lojas.css";
 
 /* contato */
-@import "./orcamento/orcamento.css;
+@import "./orcamento/orcamento.css";
 
 /* termos e condições */
 @import "./termos/termos.css";
